--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@polkadot/ui-settings": "^3.8.3",
     "@polkadot/util": "^13.0.2",
     "@polkadot/util-crypto": "^13.0.2",
+    "@polkadot/x-randomvalues": "^13.2.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/nextjs": "^8",
@@ -52,6 +53,7 @@
     "argon2": "^0.30.3",
     "bignumber.js": "^9.1.1",
     "bn.js": "^5.2.1",
+    "caniuse-lite": "^1.0.30001678",
     "chart.js": "^4.2.1",
     "classnames": "^2.3.2",
     "cookie": "^0.6.0",
