--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "showdown": "^2.1.0",
     "striptags": "^3.2.0",
     "styled-components": "^6.1.1",
+    "turndown": "^7.2.0",
     "typescript": "4.9.4",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
@@ -132,6 +133,7 @@
     "@types/remove-markdown": "^0.3.4",
     "@types/showdown": "^2.0.1",
     "@types/styled-components": "^5.1.26",
+    "@types/turndown": "^5.0.5",
     "autoprefixer": "^10.4.13",
     "cypress": "^13.8.1",
     "eslint-config-prettier": "^9.0.0",
