--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "eth-sig-util": "^3.0.1",
     "ethers": "^6.11.1",
+    "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.0.0",
     "formidable": "^3.5.1",
     "hi-base32": "^0.5.1",
