--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@polkadot/util": "^13.4.3",
     "@polkadot/util-crypto": "^13.4.3",
     "@polkadot/x-randomvalues": "^13.2.2",
+    "@react-spring/web": "^10.0.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/nextjs": "^8",
