--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "diff": "^5.1.0",
     "ejs": "^3.1.8",
     "eslint": "^8.49.0",
-    "eslint-config-next": "^14.2.10",
+    "eslint-config-next": "13.0.7",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.26.0",
@@ -83,7 +83,7 @@
     "ioredis": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "^14.2.10",
+    "next": "^13.3.1",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
